More British focus loc

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -98,9 +98,13 @@
   PB_ENG_Secure_Russian_Stability:0 "Secure Russian Stability"
   PB_ENG_Secure_Russian_Stability_desc:0 "Russia is in the midst of another conflict, this time between itself. We cannot simply stand idly and watch the Russian nation tear itself apart, we must intervene on the behalf of all peace loving Russians else another war spills out for the whole of Europe."
   PB_ENG_Continue_The_German_Friendship:0 "Continue the German Friendship"
+  PB_ENG_Continue_The_German_Friendship_desc:0 "Germany and Britain have enjoyed a long and fruitful friendship together for the last century. While we have both had our ups and downs we ultimately have seen this conflict through, with another European peace secured by the both os us let us celebrate to another century of peace and stability."
   PB_ENG_A_Federated_Australasia:0 "A Federated Oceania"
+  PB_ENG_A_Federated_Australasia_desc:0 "The Victorians in the land down under have forever dreamed of a united Oceanic continent under a British sun. While we can't force the French, Dutch, or Germans to allow us to form this federated nation of Oceanic states we can allow our two dominions, Victoria and Aotearoa to do so."
   PB_ENG_A_Equal_America:0 "An Equal America"
+  PB_ENG_A_Equal_America_desc:0 "America has always been furthering itself from us ever since the American Revolution, while we have managed to maintain our control over Philadelphia for quite some time unfortunately the conclusion of the Second Great War has once again reignited the flame of revolution in America. To avoid another conflict with America it is best that Westminster finally relinquish control of the American nation and allow them to govern themselves."
   PB_ENG_A_United_Borealia:0 "A United Borealia"
+  PB_ENG_A_United_Borealia_desc:0 "The areas of Northern America have remained divided amongst our dominions of Quebec and the Hudson Bay. With the war now over many in these regions are calling for a united Borealian nation to be formed, one still ever so loyal to London that is."
   PB_ENG_A_Red_Sun_Over_Asia:0 "A Red Sun Over Asia"
   PB_ENG_Test_The_A_Bomb:0 "Test The 'A' Bomb"
   PB_ENG_Reaffirm_Our_Position_In_The_Pacific:0 "Reaffirm Our Position In The Pacific"
