A big shit(load) of work

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -30,6 +30,31 @@
  VIN_Insurgency_cn_ADJ:0 "Vietnamese"
  VIN_Insurgency_an_ADJ:0 "Vietnamese"
 
+ VIN_Client_Empire_ni:0 "Empire of Vietnam"
+ VIN_Client_Empire_ni_DEF:0 "The Empire of Vietnam"
+ VIN_Client_Empire_ds:0 "Empire of Vietnam"
+ VIN_Client_Empire_ds_DEF:0 "The Empire of Vietnam"
+ VIN_Client_Empire_rc:0 "Empire of Vietnam"
+ VIN_Client_Empire_rc_DEF:0 "The Empire of Vietnam"
+ VIN_Client_Empire_an:0 "Empire of Vietnam"
+ VIN_Client_Empire_an_DEF:0 "The Empire of Vietnam"
+ VIN_Client_Empire_cn:0 "Empire of Vietnam"
+ VIN_Client_Empire_cn_DEF:0 "The Empire of Vietnam"
+ VIN_Client_Empire_lb:0 "Empire of Vietnam"
+ VIN_Client_Empire_lb_DEF:0 "The Empire of Vietnam"
+ VIN_Client_Empire_ss:0 "Empire of Vietnam"
+ VIN_Client_Empire_ss_DEF:0 "The Empire of Vietnam"
+ VIN_Client_Empire_jc:0 "Empire of Vietnam"
+ VIN_Client_Empire_jc_DEF:0 "The Empire of Vietnam"
+ VIN_Client_Empire_ni_ADJ:0 "Vietnamese"
+ VIN_Client_Empire_rc_ADJ:0 "Vietnamese"
+ VIN_Client_Empire_lb_ADJ:0 "Vietnamese"
+ VIN_Client_Empire_ss_ADJ:0 "Vietnamese"
+ VIN_Client_Empire_jc_ADJ:0 "Vietnamese"
+ VIN_Client_Empire_ds_ADJ:0 "Vietnamese"
+ VIN_Client_Empire_cn_ADJ:0 "Vietnamese"
+ VIN_Client_Empire_an_ADJ:0 "Vietnamese"
+
  PHI_Insurgency_ni:0 "Filipino Insurrection"
  PHI_Insurgency_ni_DEF:0 "the Filipino Insurrection"
  PHI_Insurgency_ds:0 "Filipino Insurrection"
