--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -3407,21 +3407,21 @@
  SFE_cn_ADJ:0 "Santafeano"
  SFE_an_ADJ:0 "Santafeano"
 
- VIN_ni:0 "Vietnam"
+ VIN_ni:0 "Vietnamese Republic"
  VIN_ni_DEF:0 "The Republic of Vietnam"
- VIN_ds:0 "Vietnam"
+ VIN_ds:0 "Vietnamese Republic"
  VIN_ds_DEF:0 "The Republic of Vietnam"
- VIN_rc:0 "Vietnam"
+ VIN_rc:0 "Vietnamese Republic"
  VIN_rc_DEF:0 "The Republic of Vietnam"
- VIN_an:0 "Vietnam"
+ VIN_an:0 "Vietnamese Republic"
  VIN_an_DEF:0 "The Republic of Vietnam"
- VIN_cn:0 "Vietnam"
+ VIN_cn:0 "Vietnamese Republic"
  VIN_cn_DEF:0 "The Republic of Vietnam"
- VIN_lb:0 "Vietnam"
+ VIN_lb:0 "Vietnamese Republic"
  VIN_lb_DEF:0 "The Republic of Vietnam"
- VIN_ss:0 "Vietnam"
+ VIN_ss:0 "Vietnamese Republic"
  VIN_ss_DEF:0 "The People's Republic of Vietnam"
- VIN_jc:0 "Vietnam"
+ VIN_jc:0 "Vietnamese Republic"
  VIN_jc_DEF:0 "The People's Republic of Vietnam"
  VIN_ni_ADJ:0 "Vietnamese"
  VIN_rc_ADJ:0 "Vietnamese"
@@ -8429,6 +8429,32 @@ SAN_an_ADJ:0 "Indian"
  NRU_ds_ADJ:0 "Russian"
  NRU_cn_ADJ:0 "Russian"
  NRU_an_ADJ:0 "Russian"
+
+ CAM_ni:0 "Kingdom of Cambodia"
+ CAM_ni_DEF:0 "The Kingdom of Cambodia"
+ CAM_ds:0 "Kingdom of Cambodia"
+ CAM_ds_DEF:0 "The Kingdom of Cambodia"
+ CAM_rc:0 "Kingdom of Cambodia"
+ CAM_rc_DEF:0 "The Kingdom of Cambodia"
+ CAM_an:0 "Kingdom of Cambodia"
+ CAM_an_DEF:0 "The Kingdom of Cambodia"
+ CAM_cn:0 "Kingdom of Cambodia"
+ CAM_cn_DEF:0 "The Kingdom of Cambodia"
+ CAM_lb:0 "Kingdom of Cambodia"
+ CAM_lb_DEF:0 "The Kingdom of Cambodia"
+ CAM_ss:0 "Kingdom of Cambodia"
+ CAM_ss_DEF:0 "The Kingdom of Cambodia"
+ CAM_jc:0 "Kingdom of Cambodia"
+ CAM_jc_DEF:0 "The Kingdom of Cambodia"
+ CAM_ni_ADJ:0 "Khmer"
+ CAM_rc_ADJ:0 "Khmer"
+ CAM_lb_ADJ:0 "Khmer"
+ CAM_ss_ADJ:0 "Khmer"
+ CAM_jc_ADJ:0 "Khmer"
+ CAM_ds_ADJ:0 "Khmer"
+ CAM_cn_ADJ:0 "Khmer"
+ CAM_an_ADJ:0 "Khmer"
+
 
 ###################################
 # TEMPLATE
