--- a/localisation/english/PB_war_l_english.yml
+++ b/localisation/english/PB_war_l_english.yml
@@ -51,10 +51,16 @@ WAR_NAME_ITA_IST:0 "The December Putsch War"
 WAR_NAME_IST_ITA:0 "The December Putsch War"
 
 WAR_NAME_DAS_PHI:0 "The Third Filipino Independence War"
-WAR_NAME_DAS_PHI:0 "The Third Filipino Independence War"
+WAR_NAME_PHI_DAS:0 "The Third Filipino Independence War"
 
-WAR_NAME_BFE_VIN:0 "The Tonkin Rebellion"
-WAR_NAME_VIN_BFE:0 "The Tonkin Rebellion"
+WAR_NAME_BFE_VIN:0 "The Tonkin Campaign"
+WAR_NAME_VIN_BFE:0 "The Tonkin Campaign"
+
+WAR_NAME_ECU_NWG:0 "The Ecuadorian Revolution"
+WAR_NAME_NWG_ECU:0 "The Ecuadorian Revolution"
+
+WAR_NAME_FIN_FFI:0 "The Winter Insurgency"
+WAR_NAME_FFI_FIN:0 "The Winter Insurgency"
 
 WAR_NAME_NRU_DRU:0 "The Russian Civil War"
 WAR_NAME_DRU_NRU:0 "The Russian Civil War"
