--- a/localisation/english/PB_peace_popup_l_english.yml
+++ b/localisation/english/PB_peace_popup_l_english.yml
@@ -29,6 +29,11 @@
  PB_PEACE_POPUP_GREAT_WAR_WAR_CONCLUSION_PACT:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] as the Second Great War comes to a close."
  PB_PEACE_POPUP_WAR_CONCLUSION_DAS_PHI_Victory:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have forced the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] to withdraw from the Philippines, ending the decades long war for independence"
  PB_PEACE_POPUP_WAR_CONCLUSION_PHI_DAS_Victory:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies]and pacified the islands. For now."
+ PB_PEACE_POPUP_WAR_CONCLUSION_VIN_BFE_Victory:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have forced the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies] to withdraw from Vietnam, finally securing independence from Europe."
+ PB_PEACE_POPUP_WAR_CONCLUSION_BFE_VIN_Victory:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies], ending the dream of Vietnamese independence."
+ PB_PEACE_POPUP_WAR_CONCLUSION_ECU_NWG_Victory:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have successfully won independence from [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies], dealing a heavy blow to the Bolivarian Empire."
+ PB_PEACE_POPUP_WAR_CONCLUSION_NWG_ECU_Victory:0 "The [winning_country.GetFlag] §Y[winning_country.GetNameDef]§![GetWinnerAllies] have defeated the [losing_country.GetFlag] §Y[losing_country.GetNameDef]§![GetLoserAllies], reaffirming the legitimacy of the Bolivarian monarchy."
+
 
  #Capitulation (war continuing) events
 
