Small Local Fix

--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -1,6 +1,10 @@
 ﻿  l_english:
 
  cat_terror_weapons:0 "Terror Weapons"
+ flamethrowers_tech:0 "Flamethrowers"
+ cyberdogs_tech:0 "Panzer Hounds"
+ shockjockey_tech:0 "Shock Jockey Tech"
+ cat_augmented_infantry:0 "Augmented Infantry"
  
  infantry_equipment_1933:0 "Interwar Infantry Equipment"
  infantry_equipment_1933_short:0 "Interwar Eq."
@@ -78,13 +82,13 @@
  tech_shockjockeys_4_desc:0 "An interwar expansion on tesla coil technology, Shock Jockeys use backpack mounted electrical coils and magnetized weaponry to direct high-voltage electrical waves towards enemies, causing nerve damage and liquifying soft tissue. As a result of their electrical use, these weapons are very effective in defending wet environments."
 
  tech_panzerhounds_1:0 "Panzer Hounds"
- tech_panzerhounds_1_desc:0 "Originally known as Panzerhunds in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
+ tech_panzerhounds_1_desc:0 "Originally known as Panzerhunde in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
  tech_panzerhounds_2:0 "Panzer Hounds"
- tech_panzerhounds_2_desc:0 "Originally known as Panzerhunds in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
+ tech_panzerhounds_2_desc:0 "Originally known as Panzerhunde in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
  tech_panzerhounds_3:0 "Panzer Hounds"
- tech_panzerhounds_3_desc:0 "Originally known as Panzerhunds in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
+ tech_panzerhounds_3_desc:0 "Originally known as Panzerhunde in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
  tech_panzerhounds_4:0 "Panzer Hounds"
- tech_panzerhounds_4_desc:0 "Originally known as Panzerhunds in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
+ tech_panzerhounds_4_desc:0 "Originally known as Panzerhunde in Germany, a mistranslation of the name during their adoption in Britain lead to the name Panzer Hound, with some incorrectly calling them Panther Hounds. An example of bio-mechanics, these machines utilize a dog nervous system in a machine body to produce incredibly fast killing machines for wilderness environments."
 
 
  WMDs:0 "Weapons of Mass Destruction"
