German Stuff Episode 931

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -656,6 +656,9 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_Great_Boost_Foward:0 "The Great Move Foward"
   PB_GER_Investing_Into_the_End_of_War:0 "Everything to End the Suffering"
 
+  PB_GER_Search_For_Oil:0 "Our Oil Lifeline"
+  PB_GER_Search_For_Oil_desc:0 "Every major country in the world now needs oil to maintain its global influence. Without oil there is no fuel to move our mechanized armies and there is no energy for our industry. However a lot of the sources of oil in the world lie in the hands of our rivals. However there is one place where the oil reserves remain quite untouched. Texas. When stability returns to the region of North America we can make a deal to gain access to their oil reserves."
+
   PB_GER_Black_Diplomacy:0 "Our New Destiny"
 PB_GER_Aggressive_Doctrine:0 "The German Century"
 PB_GER_Aggressive_Doctrine_2:0 "The German Century"
@@ -1852,3 +1855,5 @@ HamburgLeag_research_desc:0 "The Vienna Research Collaboration was founded in NÃ
  #country flags
  GER_IN_EXILE:0 "Germany is in exile"
  GER_Victory_In_Europe:0 "Victory in Europe"
+
+ mex_co_war_over_condition:0 "The Mexican-Coalition War is Over"
