quick push for now

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -660,13 +660,13 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_Search_For_Oil_desc:0 "Every major country in the world now needs oil to maintain its global influence. Without oil there is no fuel to move our mechanized armies and there is no energy for our industry. However a lot of the sources of oil in the world lie in the hands of our rivals. However there is one place where the oil reserves remain quite untouched. Texas. When stability returns to the region of North America we can make a deal to gain access to their oil reserves."
 
   PB_GER_Black_Diplomacy:0 "Our New Destiny"
-PB_GER_Aggressive_Doctrine:0 "The German Century"
-PB_GER_Aggressive_Doctrine_2:0 "The German Century"
-PB_GER_German_System_idea:0 "The German System"
+  PB_GER_Aggressive_Doctrine:0 "The German Century"
+  PB_GER_Aggressive_Doctrine_2:0 "The German Century"
+  PB_GER_German_System_idea:0 "The German System"
   PB_GER_Demands_Danish:0 "Threatening the Danish"
   PB_GER_Demands_Danish_desc:0 "The Danish Government has gone too far. The brutal crackdown of the Germanic Movement in Kiel was inhuman and completely unnecessary. Despite there being one or three radicals, like in every movement, the movement and its supporters very largely peaceful and worked together with the Democratic Mechanisms. The Danish have demonstrated that they are not able to govern German People with their recent escalation. The United Kingdoms of Germany has come to the conclusion that the agreements with the Danish and Kiel Governments are not in effect anymore and they have lost their right to rule the region of Holstein. We demand that the region of Holstein becomes a part of the Volksstaat of Hannover."
-  PB_GER_Warning_Swiss:0 "Warning the Swiss"
-  PB_GER_Warning_Swiss_desc:0 "It appears that Switzerland might be secretly helping the French and Russians. Apperantly several bank accounts are being created in Switzerland where French officials are stashing amounts of state gold. Furthermore we received that in Geneva, French Supporting Organizations start collecting funds and assemble volunteers. With France's Expansion Worldview it is very naive from the Swiss Officials to simply ignore these threats and try to benefit from them. We have to send a strong warning that what they are doing is not good for their wellbeing and especially ours. They should rather help our efforts."
+  PB_GER_Warning_Swiss:0 "The Travancore Expedition"
+  PB_GER_Warning_Swiss_desc:0 "The German government has invested quite a bit of money into the Indian nation of Travancore, resulting in a large and uncontested monopoly in the Travancorian economy. Some individuals in our cabinet believe we could coup the Indian Travancorian government and place someone a little more pr-German into a position of power."
   PB_GER_Look_Balkans:0 "Look to the Balkans"
   PB_GER_Look_Balkans_desc:0 "Look to the Balkans"
   PB_GER_reinforcing_grip_over_europe:0 "Reinforcing Our Grip over Europe"
@@ -676,8 +676,8 @@ PB_GER_German_System_idea:0 "The German System"
   PB_GER_German_System:0 "A German Europe"
   PB_GER_German_System_desc:0 "A German Europe"
   PB_GER_Limits_War_Economy:0 "The Limits of War Economy"
-  PB_GER_Dutch_Influence:0 "Increasing our Control over the Dutch"
-  PB_GER_Dutch_Influence_desc:0 "Increasing our Control over the Dutch"  
+  PB_GER_Dutch_Influence:0 "Purchase The Aru Islands"
+  PB_GER_Dutch_Influence_desc:0 "Our far off colony in Asia is yearning for colonial expansion. We have managed to diplomatically pressure the Dutch colony of Batavia in the East Indies to sell us the Aru Islands. "  
   PB_GER_Dalmatia_to_Italy:0 "Dalmatia to Italy?"
   PB_GER_Dalmatia_to_Italy_desc:0 ""
 
@@ -1687,6 +1687,10 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   GER_Expand_Influence_Balkans:0 "£decision_icon_small Decisions will be §Yunlocked§! to expand our influence over the Balkans"
 
   German_Liberation_Front_Presence_plus_2_tt:0 "German Liberation Front Presence §G+2§!"
+
+  GER_TRV_COUP_FAIL:0 "The coup in Travancore will fail"
+
+  GER_TRV_COUP_SUCCESS:0 "The coup in Travancore will succeed"
 
   ##########################
   # COSMETIC TAGS
