German Federation Mechanic Fixes

--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -868,7 +868,7 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.24.a:0 "Signal the French that we are willing to surrender"
 
   germany.25.t:0 "Germany Offers Unconditional Surrender"
-  germany.25.d:0 ""
+  germany.25.d:0 "With the German army defeated French collaborators have offered us a total unconditional surrender. While the rest of the German government has fled into exile in Central Africa their homeland now remains under our control. "
   germany.25.a:0 "The remaking of Europe has begun."
 
   germany.26.t:0 "Retreat from the Fatherland" # not currently used
@@ -1437,58 +1437,58 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   GER_unrest_in_rhineland:0 "[GER_unrest_in_rhineland]"
   GER_unrest_in_rhineland_tracking:0 "§Y[?GER.Germany_Rhineland_Unrest]§!"
   GER_unrest_impact_rhineland:0 "[GER_unrest_impact_rhineland]"
-  GER_unrest_impact_rhineland_low:0 "§R-5% Stability§!\n§R-0.025 Political Power Gain§!"
-  GER_unrest_impact_rhineland_medium:0 "§R-10% Stability§!\n§R-0.05 Political Power Gain§"
-  GER_unrest_impact_rhineland_high:0 "§R-15% Stability§!\n§R-0.1 Political Power Gain§"
+  GER_unrest_impact_rhineland_low:0 "§R-2% Stability§!\n§R-0.02 Political Power Gain§!"
+  GER_unrest_impact_rhineland_medium:0 "§R-5% Stability§!\n§R-0.05 Political Power Gain§!"
+  GER_unrest_impact_rhineland_high:0 "§R-8% Stability§!\n§R-0.08 Political Power Gain§"
 
   GER_unrest_in_frankfurt:0 "[GER_unrest_in_frankfurt]"
   GER_unrest_in_frankfurt_tracking:0 "§Y[?GER.Germany_Frankfurt_Unrest]§!"
   GER_unrest_impact_frankfurt:0 "[GER_unrest_impact_frankfurt]"
-  GER_unrest_impact_frankfurt_low:0 "§R-5% Stability§!\n§R-0.025 Political Power Gain§!"
-  GER_unrest_impact_frankfurt_medium:0 "§R-10% Stability§!\n§R-0.05 Political Power Gain§"
-  GER_unrest_impact_frankfurt_high:0 "§R-15% Stability§!\n§R-0.1 Political Power Gain§"
+  GER_unrest_impact_frankfurt_low:0 "§R-2% Stability§!\n§R-0.02 Political Power Gain§!"
+  GER_unrest_impact_frankfurt_medium:0 "§R-5% Stability§!\n§R-0.05 Political Power Gain§"
+  GER_unrest_impact_frankfurt_high:0 "§R--8% Stability§!\n§R-0.08 Political Power Gain§"
 
   GER_unrest_in_elsass:0 "[GER_unrest_in_elsass]"
   GER_unrest_in_elsass_tracking:0 "§Y[?GER.Germany_Elsass_Unrest]§!"
   GER_unrest_impact_elsass:0 "[GER_unrest_impact_elsass]"
-  GER_unrest_impact_elsass_low:0 "§R-5% Stability§!\n§R-0.025 Political Power Gain§!"
-  GER_unrest_impact_elsass_medium:0 "§R-10% Stability§!\n§R-0.05 Political Power Gain§"
-  GER_unrest_impact_elsass_high:0 "§R-15% Stability§!\n§R-0.1 Political Power Gain§"
+  GER_unrest_impact_elsass_low:0 "§R-2% Stability§!\n§R-0.02 Political Power Gain§!"
+  GER_unrest_impact_elsass_medium:0 "§R-5% Stability§!\n§R-0.05 Political Power Gain§!"
+  GER_unrest_impact_elsass_high:0 "§R-8% Stability§!\n§R-0.08 Political Power Gain§!"
 
   GER_unrest_in_austria:0 "[GER_unrest_in_austria]"
   GER_unrest_in_austria_tracking:0 "§Y[?GER.Germany_Austria_Unrest]§!"
   GER_unrest_impact_austria:0 "[GER_unrest_impact_austria]"
-  GER_unrest_impact_austria_low:0 "§R-5% Stability§!\n§R-0.025 Political Power Gain§!"
-  GER_unrest_impact_austria_medium:0 "§R-10% Stability§!\n§R-0.05 Political Power Gain§"
-  GER_unrest_impact_austria_high:0 "§R-15% Stability§!\n§R-0.1 Political Power Gain§"
+  GER_unrest_impact_austria_low:0 "§R-2% Stability§!\n§R-0.02 Political Power Gain§!"
+  GER_unrest_impact_austria_medium:0 "§R-5% Stability§!\n§R-0.05 Political Power Gain§!"
+  GER_unrest_impact_austria_high:0 "§R-8% Stability§!\n§R-0.08 Political Power Gain§!"
 
   GER_unrest_in_bavaria:0 "[GER_unrest_in_bavaria]"
   GER_unrest_in_bavaria_tracking:0 "§Y[?GER.Germany_Bavaria_Unrest]§!"
   GER_unrest_impact_bavaria:0 "[GER_unrest_impact_bavaria]"
-  GER_unrest_impact_bavaria_low:0 "§R-5% Stability§!\n§R-0.025 Political Power Gain§!"
-  GER_unrest_impact_bavaria_medium:0 "§R-10% Stability§!\n§R-0.05 Political Power Gain§"
-  GER_unrest_impact_bavaria_high:0 "§R-15% Stability§!\n§R-0.1 Political Power Gain§"
+  GER_unrest_impact_bavaria_low:0 "§R-2% Stability§!\n§R-0.02 Political Power Gain§!"
+  GER_unrest_impact_bavaria_medium:0 "§R-5% Stability§!\n§R-0.05 Political Power Gain§!"
+  GER_unrest_impact_bavaria_high:0 "§R-8% Stability§!\n§R-0.08 Political Power Gain§!"
 
   GER_unrest_in_saxony:0 "[GER_unrest_in_saxony]"
   GER_unrest_in_saxony_tracking:0 "§Y[?GER.Germany_Saxony_Unrest]§!"
   GER_unrest_impact_saxony:0 "[GER_unrest_impact_saxony]"
-  GER_unrest_impact_saxony_low:0 "§R-5% Stability§!\n§R-0.025 Political Power Gain§!"
-  GER_unrest_impact_saxony_medium:0 "§R-10% Stability§!\n§R-0.05 Political Power Gain§"
-  GER_unrest_impact_saxony_high:0 "§R-15% Stability§!\n§R-0.1 Political Power Gain§"
+  GER_unrest_impact_saxony_low:0 "§R-2% Stability§!\n§R-0.02 Political Power Gain§!"
+  GER_unrest_impact_saxony_medium:0 "§R-5% Stability§!\n§R-0.05 Political Power Gain§!"
+  GER_unrest_impact_saxony_high:0 "§R-8% Stability§!\n§R-0.08 Political Power Gain§!"
   
   GER_unrest_in_hannover:0 "[GER_unrest_in_hannover]"
   GER_unrest_in_hannover_tracking:0 "§Y[?GER.Germany_Hannover_Unrest]§!"
   GER_unrest_impact_hannover:0 "[GER_unrest_impact_hannover]"
-  GER_unrest_impact_hannover_low:0 "§R-5% Stability§!\n§R-0.025 Political Power Gain§!"
-  GER_unrest_impact_hannover_medium:0 "§R-10% Stability§!\n§R-0.05 Political Power Gain§"
-  GER_unrest_impact_hannover_high:0 "§R-15% Stability§!\n§R-0.1 Political Power Gain§"
+  GER_unrest_impact_hannover_low:0 "§R-2% Stability§!\n§R-0.02 Political Power Gain§!"
+  GER_unrest_impact_hannover_medium:0 "§R-5% Stability§!\n§R-0.05 Political Power Gain§!"
+  GER_unrest_impact_hannover_high:0 "§R-8% Stability§!\n§R-0.08 Political Power Gain§!"
 
   GER_unrest_in_brandenburg:0 "[GER_unrest_in_brandenburg]"
   GER_unrest_in_brandenburg_tracking:0 "§Y[?GER.Germany_Brandenburg_Unrest]§!"
   GER_unrest_impact_brandenburg:0 "[GER_unrest_impact_brandenburg]"
-  GER_unrest_impact_brandenburg_low:0 "§R-5% Stability§!\n§R-0.025 Political Power Gain§!"
-  GER_unrest_impact_brandenburg_medium:0 "§R-10% Stability§!\n§R-0.05 Political Power Gain§"
-  GER_unrest_impact_brandenburg_high:0 "§R-15% Stability§!\n§R-0.1 Political Power Gain§"
+  GER_unrest_impact_brandenburg_low:0 "§R-2% Stability§!\n§R-0.02 Political Power Gain§!"
+  GER_unrest_impact_brandenburg_medium:0 "§R-5% Stability§!\n§R-0.05 Political Power Gain§!"
+  GER_unrest_impact_brandenburg_high:0 "§R-8% Stability§!\n§R-0.08 Political Power Gain§!"
 
   GER_Austria_Text:0 "Volksstaat Österreich"
   GER_Bayern_Text:0 "Volksstaat Bayern"
