China collapse stuff + fixes

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -453,7 +453,7 @@
   PBNews.116.a:0 "Isn't the war supposed to be over?"
 
   PBNews.117.t:0 "MEXICO INVADES RIO GRANDE"
-  PBNews.117.d:0 "A Rio Grande Convoy moves through the Sierra Madre mountain chain, ambushed by Mexican troops, the diplomats who were with the convoy where held hostage if the state of Rio Grande did not surrender itself to the Mexican Army. Rio Grande refused, thus Mexico declared war./n/ The start of the River War."
+  PBNews.117.d:0 "Citing continued threatening behaviour from the Rio Grande government Mexico has decided to 'liberate' the nation from tyrrany and bring the region back under Mexican control. Mexico also made it clear to the Americas that this was the first of many steps in reclaiming the nation's lost glory. Rio Grande has already made contact with California and Tejas requesting military assistance but as it currently stands Rio Grande is left alone to fight the encroaching Mexican army.  "
   PBNews.117.a:0 "The empire expands"
 
   PBNews.118.t:0 "MEXICAN COALITION FORMS"
@@ -715,6 +715,14 @@
   PBNews.182.t:0 "TURKEY REVOLTS"
   PBNews.182.d:0 "Today in the Turkish city of Osman the Ottoman sultanate Abdulmejid II announced that the Ottoman Empire, once de facto ruled by the Russians, was no longer under the grasp of Moscow. He also informed the world that the nation would swiftly join Britain in its conflict against Russia, officaly proclaiming the nations willingess to join the British-German alliance. Moscow has openly stated that it will restore its overlordship over the Anatolia region through military might. It seems that that the on going conflict in Europe may just have another frontline to deal with."
   PBNews.182.a:0 "Loyalty is a mere illusion"
+
+  PBNews.183.t:0 "THE ROC CLAIMS VICTORY"
+  PBNews.183.d:0 "Today the capital of China, Beijing, was stormed by Chinese Republican forces, where shortly thereafter a new United States of China was proclaimed amongst the rubble of the old. While some small scale skirmishes can still be heard out of the city walls between die hard royalist supporters and Republican forces overall the conflict in China has come to a close. Now this so called United States of China begins a long and difficult period of rebuiling what was destroyed. While no mention has been made on the topic some Chinese warlords are concerned that Beijing may reclaim whats rightfully theirs."
+  PBNews.183.a:0 "From East to West, revolution draws no boundaries"
+
+  PBNews.184.t:0 "CHINA CLAIMS VICTORY"
+  PBNews.184.d:0 "The Empire of Great Qing announced to a crowd in Beijing today that it had put down the twisted Republican revolution, claiming that the supporters of such a cause had wished to destabilize traditional Chinese culture and politics. However despite the defeat of the ROC the Qing have promised to conduct various reforms to the nation in a bid to prevent a further collapse of China. What these reforms currently include is unknown but rumour has it that the Qing dynasty will finally allow elections, although in a limited capacity, to take place in the Chinese nations."
+  PBNews.184.a:0 "And so China returns to its old ways once again"
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
