--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -546,78 +546,131 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_Empower_Logistics_Department_desc:0 "An rather forgettable French officer once said that \"an army marches on its stomach\". Perhaps if his descendants had listened, it may have been the French who triumphed in the Great War. We shall not make their mistakes. Our expansion of the army will require massive quantities of food, fuel, medical supplies, and raw materials to keep our war effort going and prevent the enemy from merely starving us into surrender. Per Rommel's request, the Logistics Department will be greatly expanded and given more seniority among the branches of the General Staff."
 
   PB_GER_Goering_Air_Doctrine:0 "Goering's Air Support Doctrine"
+  PB_GER_Goering_Air_Doctrine_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Filipino_Lessons:0 "Lessons of the Filipino Insurrection"
+  PB_GER_Goering_Air_Doctrine_Filipino_Lessons_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Fighter_Models:0 "Finalize New Fighter Models"
+  PB_GER_Goering_Air_Doctrine_Fighter_Models_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Bomber_Models:0 "CAS Funding"
+  PB_GER_Goering_Air_Doctrine_Bomber_Models_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Bomber_Doctrines:0 "How to attack from the Sky"
+  PB_GER_Goering_Air_Doctrine_Bomber_Doctrines_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Rhine_Wall:0 "The Rhine Wall"
+  PB_GER_Goering_Air_Doctrine_Rhine_Wall_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Future_War:0 "The Way of the Future"
+  PB_GER_Goering_Air_Doctrine_Future_War_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Airbases:0 "Airbases for all of Europe"
-  PB_GER_Goering_Air_Doctrine_Feuerbomben:0 "The New Trend: Feuerbomben"
+  PB_GER_Goering_Air_Doctrine_Airbases_desc:0 "TBD"
+  PB_GER_Goering_Air_Doctrine_Feuerbomben:0 "The New Trend, Feuerbomben"
+  PB_GER_Goering_Air_Doctrine_Feuerbomben_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Fighter_Quanitiy:0 "Quantity over Quality"
+  PB_GER_Goering_Air_Doctrine_Fighter_Quanitiy_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Supply_Tactic:0 "The Second Supply Route"
+  PB_GER_Goering_Air_Doctrine_Supply_Tactic_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Radar_Wall:0 "Complete Surveillance"
+  PB_GER_Goering_Air_Doctrine_Radar_Wall_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Modern_Bomber_Targeting:0 "Modern Bomber Targeting"
+  PB_GER_Goering_Air_Doctrine_Modern_Bomber_Targeting_desc:0 "TBD"
   PB_GER_Goering_Air_Doctrine_Future_War:0 "Next Step in Evolution"
+  PB_GER_Goering_Air_Doctrine_Future_War_desc:0 "TBD"
 
   PB_GER_Heydrich_Sea_Doctrine:0 "Heydrich's Carrier Programme"
+  PB_GER_Heydrich_Sea_Doctrine_desc:0 "TBD"
   PB_GER_Heydrich_Sea_Doctrine_Power_Projection:0 "Power Projection"
+  PB_GER_Heydrich_Sea_Doctrine_Power_Projection_desc:0 "TBD"
   PB_GER_Heydrich_Sea_Doctrine_Carrier_Training:0 "Ruling the Seas and Skies"
+  PB_GER_Heydrich_Sea_Doctrine_Carrier_Training_desc:0 "TBD"
   PB_GER_Heydrich_Sea_Doctrine_New_Carriers:0 "Advanced Carrier Models"
+  PB_GER_Heydrich_Sea_Doctrine_New_Carriers_desc:0 "TBD"
   PB_GER_Heydrich_Sea_Doctrine_Newer_Carriers:0 "Modern Carriers"
+  PB_GER_Heydrich_Sea_Doctrine_Newer_Carriers_desc:0 "TBD"
   PB_GER_Heydrich_Sea_Doctrine_Expand_Ferdinand:0 "Expand Ferdinandshaven"
+  PB_GER_Heydrich_Sea_Doctrine_Expand_Ferdinand_desc:0 "TBD"
   PB_GER_Heydrich_Sea_Doctrine_Naval_Bombers:0 "Real Naval Bombers"
+  PB_GER_Heydrich_Sea_Doctrine_Naval_Bombers_desc:0 "TBD"
   PB_GER_Heydrich_Sea_Doctrine_Newer_Naval_Bombers:0 "Bravest Pilots"
+  PB_GER_Heydrich_Sea_Doctrine_Newer_Naval_Bombers_desc:0 "TBD"
   PB_GER_Heydrich_Sea_Doctrine_Striking_Doctrine:0 "How to Strike"
-  
+  PB_GER_Heydrich_Sea_Doctrine_Striking_Doctrine_desc:0 "TBD"
 
   PB_GER_Support_Traditionalists:0 "Support the Traditionalisten"
+  PB_GER_Support_Traditionalists_desc:0 "TBD"
 
-  PB_GER_Raeder_Sea_Doctrine:0 "Raeder's Kriegsflotte"
-  PB_GER_Raeder_Sea_Doctrine_Battlecruisers:0 "Battlecruiser Research"
+  PB_GER_Raeder_Sea_Doctrine:0 "TBD"
+  PB_GER_Raeder_Sea_Doctrine_desc:0 "Raeder's Kriegsflotte"
+  PB_GER_Raeder_Sea_Doctrine_Battlecruisers:0 "TBD"
+  PB_GER_Raeder_Sea_Doctrine_Battlecruisers_desc:0 "Battlecruiser Research"
   PB_GER_Raeder_Sea_Doctrine_Landing_Teams:0 "Expand the Sealion Teams"
+  PB_GER_Raeder_Sea_Doctrine_Landing_Teams_desc:0 "TBD"
   PB_GER_Raeder_Sea_Doctrine_Dockyard_Expansions:0 "Revive the High Seas Fleet Proposal"
+  PB_GER_Raeder_Sea_Doctrine_Dockyard_Expansions_desc:0 "TBD"
   PB_GER_Raeder_Sea_Doctrine_Guarding_Coasts:0 "Guarding the Coasts"
+  PB_GER_Raeder_Sea_Doctrine_Guarding_Coasts_desc:0 "TBD"
   PB_GER_Raeder_Sea_Doctrine_Port_Expansion:0 "Expanding all Dockyard Facilities"
+  PB_GER_Raeder_Sea_Doctrine_Port_Expansion_desc:0 "TBD"
   PB_GER_Raeder_Sea_Doctrine_Cruiser_Destroyer:0 "Modernize the Escort Ships"
+  PB_GER_Raeder_Sea_Doctrine_Cruiser_Destroyer_desc:0 "TBD"
   PB_GER_Raeder_Sea_Doctrine_Excellent_Aiming:0 "The Best Sailors"
+  PB_GER_Raeder_Sea_Doctrine_Excellent_Aiming_desc:0 "TBD"
   PB_GER_Raeder_Sea_Doctrine_High_Seas_Fleet:0 "Updating the Doctrines"
+  PB_GER_Raeder_Sea_Doctrine_High_Seas_Fleet_desc:0 "TBD"
 
   PB_GER_Richthofen_Air_Doctrine:0 "Richthofen's Air Integrity Doctrine"
+  PB_GER_Richthofen_Air_Doctrine_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_CAS:0 "Close Air Operations"
+  PB_GER_Richthofen_Air_Doctrine_CAS_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_Fighters:0 "Contest the Skies"
+  PB_GER_Richthofen_Air_Doctrine_Fighters_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_More_Fighters:0 "More is Better"
+  PB_GER_Richthofen_Air_Doctrine_More_Fighters_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_Ace_Pilots:0 "Cult of the Red Baron"
+  PB_GER_Richthofen_Air_Doctrine_Ace_Pilots_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_Ace_Doctrine:0 "The Ace Fighter Doctrine"
+  PB_GER_Richthofen_Air_Doctrine_Ace_Doctrine_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_Drugs:0 "Drugs for our Boys"
+  PB_GER_Richthofen_Air_Doctrine_Drugs_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_Zeppelin_Project:0 "Reviving the Zeppelin"
+  PB_GER_Richthofen_Air_Doctrine_Zeppelin_Project_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_Great_Airbase:0 "The Airbase Fortress"
+  PB_GER_Richthofen_Air_Doctrine_Great_Airbase_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_Increase_Firepower:0 "Increase the Firepower"
+  PB_GER_Richthofen_Air_Doctrine_Increase_Firepower_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_Zeppelin_Improve:0  "Improve Zeppelin Performance"
+  PB_GER_Richthofen_Air_Doctrine_Zeppelin_Improve_desc:0  "TBD"
   PB_GER_Richthofen_Air_Doctrine_Airfield_Targeting:0 "Emergency Airfield Building Commission"
+  PB_GER_Richthofen_Air_Doctrine_Airfield_Targeting_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_Accurate_Bombs:0 "Increase the Payloads"
+  PB_GER_Richthofen_Air_Doctrine_Accurate_Bombs_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_Air_Superiority:0 "In Europe German Planes Fly the Highest"
+  PB_GER_Richthofen_Air_Doctrine_Air_Superiority_desc:0 "TBD"
   PB_GER_Richthofen_Air_Doctrine_Best_Planes:0 "New Ways To Break the Rules"
+  PB_GER_Richthofen_Air_Doctrine_Best_Planes_desc:0 "TBD"
 
   PB_GER_War_Of_Attrition:0 "Embracing the War of Attrition"
+  PB_GER_War_Of_Attrition_desc:0 "TBD"
   PB_GER_Rundstedt_Superior_Firepower:0 "Rundstedt's Superior Firepower"
+  PB_GER_Rundstedt_Superior_Firepower_desc:0 "TBD"
   PB_GER_Rundstedt_Superior_Firepower_Streamline_Production:0 "Streamline Artillery Production"
-  PB_GER_Rundstedt_Superior_Firepower_Anti_Tank:0 "Anti-Landship Weapons"
+  PB_GER_Rundstedt_Superior_Firepower_Streamline_Production_desc:0 "TBD"
   PB_GER_Rundstedt_Superior_Firepower_Pin_Point:0 "Pin Point Targeting"
-  PB_GER_Rundstedt_Superior_Firepower_Mobile_Artillery:0 "Motorize the Artillery"
-  PB_GER_Worst_Gas:0 "§RThe Worst Gas on the Planet§!"
+  PB_GER_Rundstedt_Superior_Firepower_Pin_Point_desc:0 "TBD"
   PB_GER_Gas_Must_Flow:0 "Improve Gas Defenses"
+  PB_GER_Gas_Must_Flow_desc:0 "TBD"
   PB_GER_Refine_Trench:0 "Redefine Trench Warfare"
-  PB_GER_Drugs_Every_Soldiers:0 "§G24 Stunden Schokolade§!"
-   PB_GER_Upgrade_Infantry:0 "Improve Infantry Equipment"
+  PB_GER_Refine_Trench_desc:0 "TBD"
 
-  PB_GER_Mackensen_Trench_Doctrine:0 "Mackensen's Trench Doctrine"
-  #PB_GER_Mackensen_Trench_Doctrine_Forts:0 "Reactivate the Franz Joseph Line"
+  PB_GER_Mackensen_Trench_Doctrine_desc:0 "Mackensen's Trench Doctrine"
+  PB_GER_Mackensen_Trench_Doctrine:0 "TBD"
   PB_GER_Mackensen_Trench_Doctrine_Not_One_Step:0 "Not One Goddamned Step Back"
+  PB_GER_Mackensen_Trench_Doctrine_Not_One_Step_desc:0 "TBD"
   PB_GER_Mackensen_Trench_Doctrine_Decrease_Standards:0 "Decrease Draft Standards"
+  PB_GER_Mackensen_Trench_Doctrine_Decrease_Standards_desc:0 "TBD"
   PB_GER_Mackensen_Trench_Doctrine_Forts:0 "Idolizing the Support Doctrine"
+  PB_GER_Mackensen_Trench_Doctrine_Forts_desc:0 "TBD"
+  #PB_GER_Mackensen_Trench_Doctrine_Forts:0 "Reactivate the Franz Joseph Line"
 
   PB_GER_Mackensen_Trench_Doctrine_Never_Another_Paris:0 "Never Another Paris!"
+  PB_GER_Mackensen_Trench_Doctrine_Never_Another_Paris_desc:0 "TBD"
   
   PB_GER_Intelligence_Agency:0 "Expand the Evidenzbureau"
   PB_GER_Intelligence_Agency_Network_Gain:0 "Expand Informant Networks"
@@ -627,6 +680,7 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_Intelligence_Agency_Nuclear_Tech:0 "Einstein-Braun Proposal"
 
   PB_GER_German_Diplomacy:0 "Reassuring the Anglo-Saxon Friendship"
+  PB_GER_German_Diplomacy_desc:0 "TBD"
 
   PB_GER_Red_Diplomacy:0 "Everything for a Peaceful Europe"
   PB_GER_Improve_Spy_Network:0 "Spies in all of Europe"
@@ -642,19 +696,35 @@ PB_GER_China_Management:0 "Deutchsland in China"
   PB_GER_Approaching_Northern_Europe:0 "Approaching the Scandinavia"
 
   PB_GER_Liberal_Diplomacy:0 "Protecting Germany at all Costs"
+  PB_GER_Liberal_Diplomacy_desc:0 "TBD"
   PB_GER_Hugenberg_Line:0 "The Hugenberg Line"
+  PB_GER_Hugenberg_Line_desc:0 "TBD"
   PB_GER_Emergency_Directives:0 "German-British Army Training"
+  PB_GER_Emergency_Directives_desc:0 "TBD"
   PB_GER_War_Rationing_Plan:0 "The War Rationing Plan"
+  PB_GER_War_Rationing_Plan_desc:0 "TBD"
   PB_GER_Rhine_Line:0 "Die Wacht am Rhein"
+  PB_GER_Rhine_Line_desc:0 "TBD"
   PB_GER_Woman_In_Military:0 "Woman in the Airforce"
+  PB_GER_Woman_In_Military_desc:0 "TBD"
   PB_GER_Colonial_Army:0 "Increase the Colonial Army"
+  PB_GER_Colonial_Army_desc:0 "TBD"
   PB_GER_Colonial_Soldiers:0 "Improve Professionalism for Colonial Soldiers"
+  PB_GER_Colonial_Soldiers_desc:0 "TBD"
   PB_GER_Argonne_Line:0 "Fortifications in the Argonne"
+  PB_GER_Argonne_Line_desc:0 "TBD"
   PB_GER_Civlian_Militia_Programm:0 "Emergency Militia Directive"
+  PB_GER_Civlian_Militia_Programm_desc:0 "TBD"
   PB_GER_National_Spirit:0 "Glorify our National Spirit"
+  PB_GER_National_Spirit_desc:0 "TBD"
   PB_GER_Alp_Factories:0 "The Alp Factories"
+  PB_GER_Alp_Factories_desc:0 "TBD"
   PB_GER_Great_Boost_Foward:0 "The Great Move Foward"
+  PB_GER_Great_Boost_Foward_desc:0 "TBD"
   PB_GER_Investing_Into_the_End_of_War:0 "Everything to End the Suffering"
+  PB_GER_Investing_Into_the_End_of_War_desc:0 "TBD"
+  PB_GER_Fortify_The_Dutch_German_Border:0 "Fortify the Dutch-German Border"
+  PB_GER_Fortify_The_Dutch_German_Border_desc:0 "TBD"
 
   PB_GER_Search_For_Oil:0 "Our Oil Lifeline"
   PB_GER_Search_For_Oil_desc:0 "Every major country in the world now needs oil to maintain its global influence. Without oil there is no fuel to move our mechanized armies and there is no energy for our industry. However a lot of the sources of oil in the world lie in the hands of our rivals. However there is one place where the oil reserves remain quite untouched. Texas. When stability returns to the region of North America we can make a deal to gain access to their oil reserves."
