--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -304,9 +304,9 @@
   PBNews.79.d:0 "Confusing reports from the former mexican empire's nation of California have come from it's western border. Described by preliminary reports as red-clad Dominion soldiers, these hostiles are advancing rapidly out of the rockies and into the san francisco delta with alarming speed and professionalism.\n\nThe invading soldiers bear remarkable similarities to the Jacobin Revolution that failed in America. That couldn't be possible though, could it?"
   PBNews.79.a:0 "This can't be good"
 
-  PBNews.80.t:0 "FALL OF CALIFORNIA"
-  PBNews.80.d:0 "The last capitalist nation in the wild west has been enveloped by the fires of revolution.\n\nThe remnants of the Jacobin revolutionaries of the American Dominon led by Smedley Butler fled west, avoiding the British forces. Many assumed that they would die eventually to native raiding parties and the elements, however they have remained undefeated in their quest to spread the revolution throughought all of America.\n\nWith no further resistance in the West, it seems that the red tide is set to pull the rest of the continent into war like a bloody riptide."
-  PBNews.80.a:0 "A new contender arises"
+  #PBNews.80.t:0 "FALL OF CALIFORNIA" #Why is this firing?
+  #PBNews.80.d:0 "The last capitalist nation in the wild west has been enveloped by the fires of revolution.\n\nThe remnants of the Jacobin revolutionaries of the American Dominon led by Smedley Butler fled west, avoiding the British forces. Many assumed that they would die eventually to native raiding parties and the elements, however they have remained undefeated in their quest to spread the revolution throughought all of America.\n\nWith no further resistance in the West, it seems that the red tide is set to pull the rest of the continent into war like a bloody riptide."
+  #PBNews.80.a:0 "A new contender arises"
 
   PBNews.81.t:0 "A RED AMERICA" #old
   PBNews.81.d:0 ""
